// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioGroup should be rendered correctly 1`] = `
<fieldset
  className="root uui-vertical-direction"
>
  <label
    className="container root uui-size-18 uui-radio-input-container uui-color-primary -clickable"
  >
    <div
      className="uui-radioinput"
    >
      <input
        aria-checked={false}
        checked={false}
        onChange={[Function]}
        type="radio"
      />
    </div>
    <div
      className="uui-input-label"
    >
      Test1
    </div>
  </label>
  <label
    className="container root uui-size-18 uui-radio-input-container uui-color-primary -clickable"
  >
    <div
      className="uui-radioinput"
    >
      <input
        aria-checked={false}
        checked={false}
        onChange={[Function]}
        type="radio"
      />
    </div>
    <div
      className="uui-input-label"
    >
      Test2
    </div>
  </label>
</fieldset>
`;

exports[`RadioGroup should be rendered correctly with props 1`] = `
<fieldset
  className="root uui-horizontal-direction"
>
  <label
    className="container uui-disabled root uui-size-18 uui-radio-input-container uui-color-primary"
  >
    <div
      className="uui-radioinput"
    >
      <input
        aria-checked={false}
        aria-disabled={true}
        checked={false}
        disabled={true}
        onChange={[Function]}
        type="radio"
      />
    </div>
    <div
      className="uui-input-label"
    >
      Test1
    </div>
  </label>
  <label
    className="container uui-disabled root uui-size-18 uui-radio-input-container uui-color-primary"
  >
    <div
      className="uui-radioinput"
    >
      <input
        aria-checked={false}
        aria-disabled={true}
        checked={false}
        disabled={true}
        onChange={[Function]}
        type="radio"
      />
    </div>
    <div
      className="uui-input-label"
    >
      Test2
    </div>
  </label>
</fieldset>
`;
